@@ -122,4 +122,5 @@ teavm.wasm {
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
     options.release.set(21)
+    options.compilerArgs.add("--enable-preview")
 }
